--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
                     <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>Mirpur-2, Dhaka-1216</small>
                     <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+01835971455</small>
-                    <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@example.com</small>
+                    <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@mindheavenbd.com</small>
                 </div>
             </div>
             <div class="col-lg-4 text-center text-lg-end">
