--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
                     <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>Mirpur-2, Dhaka-1216</small>
-                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+01835971455</small>
+                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+88 01835971455</small>
                     <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@mindheavenbd.com</small>
                 </div>
             </div>
@@ -230,7 +230,7 @@
                         </div>
                         <div class="ps-4">
                             <h5 class="mb-2">Call to ask any question</h5>
-                            <h4 class="text-primary mb-0">+012 345 6789</h4>
+                            <h4 class="text-primary mb-0">+88 01835971455</h4>
                         </div>
                     </div>
                     <a href="quote.html" class="btn btn-primary py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s">Request A Quote</a>
