--- a/index.html
+++ b/index.html
@@ -76,26 +76,26 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="service.html" class="nav-item nav-link">Services</a>
+                     <a href="#" class="nav-item nav-link">About</a>   <!-- about.html -->
+                    <a href="#" class="nav-item nav-link">Services</a>    <!-- service.html -->
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Blog</a>
                         <div class="dropdown-menu m-0">
-                            <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                            <a href="detail.html" class="dropdown-item">Blog Detail</a>
+                            <a href="#" class="dropdown-item">Blog Grid</a>   <!-- blog.html -->
+                            <a href="#" class="dropdown-item">Blog Detail</a>   <!-- detail.html -->
                         </div>
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                         <div class="dropdown-menu m-0">
-                            <a href="price.html" class="dropdown-item">Pricing Plan</a>
-                            <a href="feature.html" class="dropdown-item">Our features</a>
-                            <a href="team.html" class="dropdown-item">Team Members</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                            <a href="quote.html" class="dropdown-item">Free Quote</a>
+                            <a href="#" class="dropdown-item">Pricing Plan</a>   <!-- price.html -->
+                            <a href="#" class="dropdown-item">Our features</a>  <!--feature.html-->
+                            <a href="#" class="dropdown-item">Team Members</a>   <!--team.html -->
+                            <a href="#" class="dropdown-item">Testimonial</a> <!--testimonial.html -->
+                            <a href="#" class="dropdown-item">Free Quote</a> <!--quote.html -->
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="#" class="nav-item nav-link">Contact</a>   <!--contact.html -->
                 </div>
                 <!-- <butaton type="button" class="btn text-primary ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
                 <a href="https://htmlcodex.com/startup-company-website-template" class="btn btn-primary py-2 px-4 ms-3">Download Pro Version</a> -->
