--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     <p class="mb-4">Our Vision is to lead design industry with creative concepts, innovative thinking, inspirational skills and services by perusing latest trend technology also quality driven approach. We want to emerge as a global leader for creative design, event management, television drama and advertising sector.  </p>
                     <div class="row g-0 mb-3">
                         <div class="col-sm-6 wow zoomIn" data-wow-delay="0.2s">
-                            <h5 class="mb-3"><i class="fa fa-check text-primary me-3"></i>Award Winning</h5>
+                            <h5 class="mb-3"><i class="fa fa-check text-primary me-3"></i>Creative Service</h5>
                             <h5 class="mb-3"><i class="fa fa-check text-primary me-3"></i>Professional Staff</h5>
                         </div>
                         <div class="col-sm-6 wow zoomIn" data-wow-delay="0.4s">
